--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -19,7 +19,10 @@ modules:
 
   - type: rpm-ostree
     repos: # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
+      - https://copr.fedorainfracloud.org/coprs/lukenukem/asus-linux/repo/fedora-%OS_VERSION%/lukenukem-asus-linux-fedora-%OS_VERSION%.repo
     install:
+      - asusctl
+      - supergfxctl
       # - micro
       # - starship
     remove:
