--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -50,3 +50,8 @@ modules:
         # - org.gnome.eog
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
+
+  - type: systemd
+    system:
+      enabled:
+        - supergfxd.service
