--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -24,6 +24,7 @@ modules:
       - asusctl
       - supergfxctl
       - distrobox
+      - pipewire-alsa
       # - micro
       # - starship
     remove:
