add systemwide flatpak apps

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -44,7 +44,13 @@ modules:
       # repo-name: flathub
       # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
       install:
+        - com.github.tchx84.Flatseal
         - org.mozilla.firefox
+        - com.google.Chrome
+        - com.brave.Browser
+        - com.valvesoftware.Steam
+        - com.valvesoftware.Steam.CompatibilityTool.Proton-GE
+        - com.usebottles.bottles
         # - org.gnome.Loupe
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
         # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
