--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -54,6 +54,7 @@ modules:
         - com.valvesoftware.Steam
         - com.valvesoftware.Steam.CompatibilityTool.Proton-GE
         - com.usebottles.bottles
+        - org.remmina.Remmina
         # - org.gnome.Loupe
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
         # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
