--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -31,6 +31,8 @@ modules:
       - distrobox
       - pipewire-alsa
       - zerotier-one
+      - rofimoji
+      - yt-dlp
       # - micro
       # - starship
     remove:
